--- a/scripts/telegraf-nd.service
+++ b/scripts/telegraf-nd.service
@@ -6,9 +6,9 @@ Wants=network-online.target
 
 [Service]
 Type=notify
-EnvironmentFile=-/etc/default/telegraf
-User=telegraf
-ExecStart=/usr/bin/telegraf -config /etc/telegraf/telegraf.conf -config-directory /etc/telegraf/telegraf.d $TELEGRAF_OPTS
+EnvironmentFile=-/etc/default/telegraf-nd
+User=telegraf-nd
+ExecStart=/opt/bin/telegraf-nd -config /etc/telegraf-nd/telegraf-nd.conf -config-directory /etc/telegraf-nd/telegraf-nd.d $TELEGRAF_OPTS
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-failure
 RestartForceExitStatus=SIGPIPE
