fixes for Prometheus_remote_write plugin

--- a/etc/telegraf-nd.conf
+++ b/etc/telegraf-nd.conf
@@ -1677,6 +1677,12 @@
 #   ## Export metric collection time.
 #   # export_timestamp = false
 
+# # Send metrics to systems that accept Prometheus Remote Write.
+# [[outputs.prometheus_remote_write]]
+#   url = "https://localhost/"
+#   # basic_username = "Foo"
+#   # basic_password = "Bar"
+
 # # Configuration for the RedisTimeSeries server to send metrics to
 # [[outputs.redistimeseries]]
 #   ## The address of the RedisTimeSeries server.
